[package]
name = "week3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10"
rand = "0.8.5"
blake3 = "1.3"
sha3 = "0.10"

[dev-dependencies]
# Benchmarking
criterion = "0.4.0"
openssl = { version = "0.10", features = ["vendored"] }

[[bench]]
name = "week3"
harness = false

